# DeepSDFStruct

./: .buildinfo  .deepsource.toml  .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  SDF_FEATURE_TRACKING.md  api_reference.html  example.ipynb  example.py  genindex.html  index.html  linemesh.vtk  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  docs.yml  test.yml
DeepSDFStruct/: SDF.py  __init__.py  design_of_experiments.py  lattice_structure.py  local_shapes.py  mesh.py  optimization.py  parametrization.py  plotting.py  pretrained_models.py  sampling.py  sdf_operations.py  sdf_primitives.py  torch_spline.py  training.py  utils.py
DeepSDFStruct/SDF_folder/: double_lattice_extruded.py  plotting.py
DeepSDFStruct/deep_sdf/: __init__.py  create_libtorch_executable.py  create_ply_files_from_latent.py  create_screenshots_from_plyfiles.py  data.py  main.py  mesh.py  models.py  nn_utils.py  plotting.py  reconstruction.py  train_deep_sdf.py  training.py  utils.py  workspace.py
DeepSDFStruct/flexicubes/: __init__.py  flexicubes.py  tables.py
DeepSDFStruct/flexisquares/: __init__.py  flexisquares.py  tables.py
DeepSDFStruct/sdf_unitcells/: corner_spheres.py  cross_sdf.py
DeepSDFStruct/splinepy_unitcells/: __init__.py  chi_3D.py  (+3 more)
_sources/: api_reference.rst.txt  index.rst.txt
_static/: documentation_options.js
benchmarks/: generate_sdf_showcase.py  sdf_from_mesh_benchmark.py  sdf_from_mesh_comparison.md
docs/: conf.py  index.rst
tests/: example_negative_volumes.py  test_DOE.py  test_elongate_sdf.py  test_flexisquares.py  test_generate_dataset.py  test_lattice_evaluation.py  test_mesh_export.py  test_mesh_functions.py  test_networks.py  test_pretrained_models.py  test_reconstruction.py  test_sdf_from_mesh.py  test_sdf_functions.py  test_sdf_mesh.py  test_sdf_primitives.py  test_sdf_trimesh_comparison.py  test_splinepy_unitcells.py  test_structural_optimization.py  test_tet_orientation.py  test_torch_spline.py  test_train.py  test_train_model.py  test_training_data_ids.py  test_vtk_export.py
wip/: optimization.py
(+55 files in other folders)
