[tool.black]
skip-magic-trailing-comma = true


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepSDFStruct"
version = "1.0.5"
description = "Deep Implicit Lattice Geometry"
authors = [
    { name = "Michael Kofler", email = "michael.kofler@tuwien.ac.at" }
]
requires-python = ">=3.8"

dependencies = [
    "plyfile",
    "scikit-image",
    "trimesh",
    "matplotlib",
    "gustaf @ git+https://github.com/mkofler96/gustaf.git@ft-mfem-3D-export",
    "splinepy",
    "vedo",
    "libigl",
    "embreex",
    "tetgenpy",
    "meshio",
    "numba",
    "napf",
    "mmapy",
    "torch",
    "torchvision",
    "torchaudio",
    "pytest>=8.3.5",
    "huggingface-hub>=0.33.2",
    "pytest-cov>=5.0.0",
    "triangle>=20250106",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true
