[tool.black]
skip-magic-trailing-comma = true


[build-system]
requires = ["setuptools>=80", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepSDFStruct"
dynamic = ["version"]
description = "Deep Implicit Lattice Geometry"
authors = [
    { name = "Michael Kofler", email = "michael.kofler@tuwien.ac.at" }
]
requires-python = ">=3.10"


dependencies = [
    "plyfile",
    "scikit-image",
    "trimesh",
    "matplotlib",
    "gustaf",
    "splinepy",
    "vedo",
    "libigl",
    "tetgenpy",
    "meshio",
    "numba",
    "napf",
    "mmapy",
    "torch",
    "torchvision",
    "torchaudio",
    "pytest>=8.3.5",
    "huggingface-hub>=0.33.2",
    "pytest-cov>=5.0.0",
    "triangle>=20250106",
    "vtk>=9.5.1",
    "torch-fem>=0.4.5",
    "mlflow>=3.5.0",
    "numpy>=2.0.0",
]

[tool.setuptools_scm]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ["DeepSDFStruct"]
